# arch-portal-v2

./: .dockerignore  .replit  Dockerfile  INSTRUCTIONS.md  README.md  add_sample_data.py  backup.dump  main.py  pyproject.toml
assets/: styles.css
components/: admin.py  capabilities.py  entity_details.py  graph.py  home.py
models/: database.py  entities.py
scripts/: add_sample_data.py  install.sh
utils/: audit.py  auth.py
